--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,23 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.RELEASE_GH_TOKEN }}
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+
+      - name: Install dependencies and build TS
+        run: npm ci && npm run build
+
+      # - name: Install semantic-release and friends
+      #   run: npm i --no-save semantic-release@19 @semantic-release/changelog@6 @semantic-release/exec@6 @semantic-release/git@10
+      # - name: Run semantic-release workflow
+      #   env:
+      #     GH_TOKEN: ${{ secrets.RELEASE_GH_TOKEN }}
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      #   run: npx semantic-release
+
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
@@ -52,18 +69,3 @@ jobs:
         with:
           labels: ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
-
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 16
-      #     cache: 'npm'
-      # - name: Install dependencies and build TS
-      #   run: npm ci && npm run build
-      # - name: Install semantic-release and friends
-      #   run: npm i --no-save semantic-release@19 @semantic-release/changelog@6 @semantic-release/exec@6 @semantic-release/git@10
-      # - name: Run semantic-release workflow
-      #   env:
-      #     GH_TOKEN: ${{ secrets.RELEASE_GH_TOKEN }}
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      #   run: npx semantic-release
