--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,14 +30,16 @@ jobs:
       - name: Install dependencies and build TS
         run: npm ci && npm run build
 
-      # - name: Install semantic-release and friends
-      #   run: npm i --no-save semantic-release@19 @semantic-release/changelog@6 @semantic-release/exec@6 @semantic-release/git@10
-      # - name: Run semantic-release workflow
-      #   env:
-      #     GH_TOKEN: ${{ secrets.RELEASE_GH_TOKEN }}
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      #   run: npx semantic-release
+      - name: Install semantic-release and friends
+        run: npm i --no-save semantic-release@19 @semantic-release/changelog@6 @semantic-release/exec@6 @semantic-release/git@10
+
+      - name: Run semantic-release workflow
+        id: release
+        env:
+          GH_TOKEN: ${{ secrets.RELEASE_GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
