--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,13 @@ jobs:
           path: oas-examples-repo
           repository: readmeio/oas-examples
 
+      - name: Update action.yml to build locally
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: 'image:.*'
+          replace: "image: 'Dockerfile'"
+          include: rdme-repo/action.yml
+
       - name: Run `openapi:validate` command
         uses: ./rdme-repo/
         with:
