--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,12 @@ jobs:
           path: oas-examples-repo
           repository: readmeio/oas-examples
 
-      - name: Update action.yml to build locally
+      # For every GitHub Action release, we deploy our Docker images
+      # to the GitHub Container Registry for performance reasons.
+      # Instead of testing against the pre-built image, we can build
+      # an image from the currently checked-out repo contents by doing a
+      # li'l update in the action.yml file to point to the current Dockerfile.
+      - name: Replace Docker image value in action.yml
         uses: jacobtomlinson/gha-find-replace@v3
         with:
           find: 'image:.*'
