--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -12,11 +12,8 @@ plugins:
   - [
       '@semantic-release/exec',
       {
-        # Sets the next version as a GitHub Actions output parameter
-        # for usage in subsequent workflow steps
-        # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-output-parameter
-        'verifyReleaseCmd': 'echo nextVersion=${nextRelease.version} >> $GITHUB_OUTPUT',
-        # Updates our action.yml file to reflect current Docker image version
+        # Updates our action.yml file to reflect current Docker image version.
+        # This needs to happen before `git` so we can to commit this file
         'prepareCmd': './bin/set-action-image.js ${nextRelease.version}',
       },
     ]
@@ -30,6 +27,9 @@ plugins:
   - [
       '@semantic-release/exec',
       {
+        # Sets the next version as a GitHub Actions output parameter for usage in subsequent workflow steps
+        # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-output-parameter
+        'verifyReleaseCmd': 'echo nextVersion=${nextRelease.version} >> $GITHUB_OUTPUT',
         # Adds a couple extra tags as aliases for our GitHub Actions users
         'prepareCmd': 'git tag ${nextRelease.version} && ./bin/set-major-version-tag.js',
         # Lightweight alternative to `@semantic-release/github` that creates a draft release
