--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Dry run of semantic-release workflow
         run: npx semantic-release --dry-run
         id: release
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
