--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          # For every release we had 2-3 tags to the docker build:
+          # For every release we add 2-3 tags to the docker build:
           # 1. A semver tag (e.g., 8.0.0, 8.0.0-next.0)
           # 2. A branch tag (e.g., next, main)
           # 3. A `latest` tag (only on the main branch)
