--- a/action.yml
+++ b/action.yml
@@ -10,4 +10,4 @@ inputs:
     required: true
 runs:
   using: docker
-  image: 'docker://ghcr.io/readmeio/rdme:8.6.0-next.13'
+  image: docker://ghcr.io/readmeio/rdme:8.6.0-next.13
