--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -7,16 +7,18 @@ plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
   - '@semantic-release/changelog'
-  # `npm` must be before `git` so the `npm` command can properly bump
-  # the package*.json files before we commit the changes
+  # `@semantic-release/npm` must be before `@semantic-release/git`
+  # so the `@semantic-release/npm` plugin can properly update the version
+  # in the package*.json files before we commit the changes in `@semantic-release/git`
   - '@semantic-release/npm'
   - [
       '@semantic-release/exec',
       {
-        # Updates our action.yml file to reflect current Docker image version.
-        # This needs to happen before `git` so we can to commit this file.
-        # The second command builds the Docker image
-        'prepareCmd': './bin/set-action-image.js && ./bin/docker.js build',
+        # Runs two commands:
+        # 1. Updates our action.yml file to reflect current Docker image version.
+        #   This needs to happen before `@semantic-release/git` so we can commit this file.
+        # 2. Builds and pushes the Docker image
+        'prepareCmd': './bin/set-action-image.js && ./bin/docker.js',
       },
     ]
   - [
@@ -36,8 +38,7 @@ plugins:
         'verifyReleaseCmd': 'echo nextVersion=${nextRelease.version} >> $GITHUB_OUTPUT',
         # Adds a couple extra tags as aliases for our GitHub Actions users
         'prepareCmd': 'git tag ${nextRelease.version} && ./bin/set-major-version-tag.js',
-        # Lightweight alternative to `@semantic-release/github` that creates a draft release
-        # The second command pushes the docker image to the registry
-        'publishCmd': 'gh release create ${nextRelease.version} --draft --generate-notes && ./bin/docker.js push',
+        # Lightweight alternative to `@semantic-release/github` that creates a draft GitHub release
+        'publishCmd': 'gh release create ${nextRelease.version} --draft --generate-notes',
       },
     ]
