--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -2,29 +2,43 @@ branches:
   - name: main
   - name: next
     prerelease: true
+
 plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
   - '@semantic-release/changelog'
-  # `npm` must be before `git` so the `npm` command can properly bump
-  # the package*.json files before we commit the changes
+  # `@semantic-release/npm` must be before `@semantic-release/git`
+  # so the `@semantic-release/npm` plugin can properly update the version
+  # in the package*.json files before we commit the changes in `@semantic-release/git`
   - '@semantic-release/npm'
+  - [
+      '@semantic-release/exec',
+      {
+        # Runs two commands:
+        # 1. Updates our action.yml file to reflect current Docker image version.
+        #   This needs to happen before `@semantic-release/git` so we can commit this file.
+        # 2. Builds and pushes the Docker image
+        'prepareCmd': './bin/set-action-image.js && ./bin/docker.js',
+      },
+    ]
   - [
       '@semantic-release/git',
       {
-        # TODO: once docker builds are a thing, we're going to have to manually add the assets
-        # since we're also updating the action.yml file with every release!
-        # Uncomment this line below once those changes are live:
-        # assets: ['action.yml', 'CHANGELOG.md', 'package.json', 'package-lock.json'],
+        assets: ['action.yml', 'CHANGELOG.md', 'package.json', 'package-lock.json'],
         message: "build(release): 🚀 v${nextRelease.version} 🦉\n\n${nextRelease.notes}\n[skip ci]",
       },
     ]
   - [
       '@semantic-release/exec',
       {
+        # Verify existence of gh and docker CLIs
+        'verifyConditionsCmd': './bin/verify-clis.sh',
+        # Sets the next version as a GitHub Actions output parameter for usage in subsequent workflow steps
+        # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-output-parameter
+        'verifyReleaseCmd': 'echo nextVersion=${nextRelease.version} >> $GITHUB_OUTPUT',
         # Adds a couple extra tags as aliases for our GitHub Actions users
         'prepareCmd': 'git tag ${nextRelease.version} && ./bin/set-major-version-tag.js',
-        # Lightweight alternative to `@semantic-release/github` that creates a draft release
+        # Lightweight alternative to `@semantic-release/github` that creates a draft GitHub release
         'publishCmd': 'gh release create ${nextRelease.version} --draft --generate-notes',
       },
     ]
