chore: add GHA output with command result

--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,9 @@ inputs:
   rdme:
     description: Command to pass into rdme
     required: true
+outputs:
+  rdme:
+    description: The rdme command result output
 runs:
   using: docker
   image: docker://ghcr.io/readmeio/rdme:8.6.0-next.16
