chore: add `open` to dependabot exclusions 😭

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,3 +40,6 @@ updates:
       - dependency-name: ora
         versions:
           - '>= 6'
+      - dependency-name: open
+        versions:
+          - '>= 9'
