fix(docker): safer argument parsing for GitHub Actions (#788)
* chore: try tweaking dockerfile

* chore: try adding quotes around filename

* Revert "chore: try tweaking dockerfile"

This reverts commit a82c278a64d012283fe5567e0fd52942997e2e36.

* chore: try downgrading CLI usage

* chore: try an entrypoint file approach

* revert: rebump cliUsage

* fix: try this

* chore: try this

* fix: get entrypoint working

* chore(temp): try building and pushing

* chore: login oops

* revert: remove build push, add entrypoint debug

* revert: uncommnet

* chore: try this (sigh)

* chore: reset

* chore: remove args oops

* chore: try this

see this: https://stackoverflow.com/a/13802438

* Revert "chore: try this"

This reverts commit f900a398ab1cc9d2ac63e026060928837670bd46.

* chore: try single quotes

if this works i'm gonna scream

* Revert "chore: try single quotes"

This reverts commit 6138dc7db36a0c66e2320b5c5e7eae1f1b3c816b.

* chore: try using curly braces

* chore: try this

* chore: wait what about this

* chore: debug

* chore: revert

* fix: will this work?

* ci: add a dedicated filename test

* ci: add another test

* test: add tests

* docs: add descriptive comments

* refactor: safer deterministic way to indicate GHA args

* chore: lint

* fix: use string-argv instead

* test: add another test case

... also rename a test

* test: remove redundant tests, clean up names

* chore: add some debug statements

* revert: delete .DS_Store

--- a/action.yml
+++ b/action.yml
@@ -14,3 +14,6 @@ outputs:
 runs:
   using: docker
   image: docker://ghcr.io/readmeio/rdme:8.6.0
+  args:
+    - docker-gha
+    - ${{ inputs.rdme }}
