--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,18 @@ jobs:
         with:
           rdme: openapi:validate oas-examples-repo/3.1/json/petstore.json
 
+      - name: Run `openapi:validate` with filename in quotes
+        uses: ./rdme-repo/
+        with:
+          rdme: openapi:validate "oas-examples-repo/3.1/json/petstore.json"
+
       # Docs: https://rdme-test.readme.io
       - name: Run `openapi` command
         uses: ./rdme-repo/
         with:
           rdme: openapi oas-examples-repo/3.1/json/petstore.json --key=${{ secrets.RDME_TEST_PROJECT_API_KEY }} --id=${{ secrets.RDME_TEST_PROJECT_API_SETTING }}
+
+      - name: Run `openapi` command with weird arg syntax
+        uses: ./rdme-repo/
+        with:
+          rdme: openapi "oas-examples-repo/3.1/json/petstore.json" --key "${{ secrets.RDME_TEST_PROJECT_API_KEY }}" --id=${{ secrets.RDME_TEST_PROJECT_API_SETTING }}
