ci: try installing npm@7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
 
+      - name: Install npm@7 for Node 14
+        if: ${{ matrix.node-version }} == 14
+        run: npm i -g npm@7
+
       - name: Install deps
         run: npm ci
 
