--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "resolveJsonModule": true,
     "target": "ES2020"
   },
-  "include": ["./config/*.js", "./config/*.json", "./src/**/*"]
+  "include": ["./config/*.cjs", "./config/*.json", "./src/**/*"]
 }
