chore: try this with jest
can we move off jest? all my homies hate jest

--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
-    "test": "jest --coverage"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage"
   },
   "commitlint": {
     "extends": [
