--- a/__tests__/.eslintrc
+++ b/__tests__/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": ["@readme/eslint-config/testing"]
+  "extends": "@readme/eslint-config/testing/vitest",
+  "rules": {
+    "@typescript-eslint/no-empty-function": "off",
+  }
 }
