--- a/package.json
+++ b/package.json
@@ -103,11 +103,11 @@
   "scripts": {
     "build": "tsc",
     "debug": "ts-node src/cli.ts",
-    "lint": "eslint . bin/rdme --ext .js,.ts",
+    "lint": "npx alex . && npm run lint:ts && npm run prettier && npm run schemas:check",
+    "lint:ts": "eslint . bin/rdme --ext .js,.ts",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "prepare": "husky install",
-    "pretest": "npx alex . && npm run lint && npm run prettier && npm run schemas:check",
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
