--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
-    "test": "vitest run --coverage",
+    "test": "npm run test:multi && npm run test:single",
+    "test:multi": "vitest run --coverage",
     "test:single": "vitest run --coverage --config vitest.single-threaded.config.ts"
   },
   "commitlint": {
