--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "prepare": "husky install",
+    "pretest": "npm run build",
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
