refactor: enable node protocol
deno needs this

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
         }
       }
     ],
+    "unicorn/prefer-node-protocol": "error",
 
     /**
      * Because our command classes have a `run` method that might not always call `this` we need to
