fix(ci): split out ci and test steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
 
-      - name: Build and run tests
-        run: npm cit
+      - name: Install deps
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
 
   lint:
     runs-on: ubuntu-latest
