chore: bumping eslint-config

--- a/__tests__/.eslintrc
+++ b/__tests__/.eslintrc
@@ -1,6 +1,3 @@
 {
-  "extends": "@readme/eslint-config/testing/vitest",
-  "rules": {
-    "@typescript-eslint/no-empty-function": "off"
-  }
+  "extends": "@readme/eslint-config/testing/vitest"
 }
