chore: bring in new eslint rule, fix up some more issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["@readme/eslint-config", "@readme/eslint-config/typescript"],
+  "extends": ["plugin:require-extensions/recommended", "@readme/eslint-config", "@readme/eslint-config/typescript"],
   "root": true,
   "overrides": [
     {
