--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "ajv": "^8.11.0",
     "alex": "^11.0.0",
     "eslint": "^8.47.0",
+    "eslint-plugin-require-extensions": "^0.1.3",
     "headers-polyfill": "^3.1.2",
     "husky": "^8.0.0",
     "js-yaml": "^4.1.0",
