chore: refine eslint extensions

--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "build": "tsc",
     "debug": "ts-node src/cli.ts",
     "lint": "alex . && knip && npm run lint:ts && npm run prettier && npm run schemas:check",
-    "lint:ts": "eslint . --ext .js,.ts,.mjs",
+    "lint:ts": "eslint . --ext .js,.ts",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "prepare": "husky install",
