--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,8 @@
     "target": "ES2022",
     "useUnknownInCatchVariables": false
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "ts-node": {
+    "esm": true
+  }
 }
