feat: first pass at createGHA hook

--- a/package.json
+++ b/package.json
@@ -153,6 +153,9 @@
     "hooks": {
       "prerun": [
         "./dist/lib/hooks/prerun"
+      ],
+      "createGHA": [
+        "./dist/lib/hooks/createGHA"
       ]
     }
   },
