chore: rip test coverage

--- a/package.json
+++ b/package.json
@@ -120,8 +120,8 @@
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
     "test": "npm run test:multi && npm run test:single",
-    "test:multi": "vitest run --coverage",
-    "test:single": "vitest run --coverage --config vitest.single-threaded.config.ts"
+    "test:multi": "vitest run",
+    "test:single": "vitest run --config vitest.single-threaded.config.ts"
   },
   "commitlint": {
     "extends": [
